tests/invalid/function/local_let_rec_generic_syntax.facet
fn main() -> unrestricted isize {
  let rec f<T>(x: unrestricted T) -> unrestricted T {
    x
  } in (f 1)
}
